// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babelrc actions/reducer allows adding a new plugin 1`] = `
Object {
  "options": Object {
    "babelrc": false,
    "cacheDirectory": true,
  },
  "stages": Object {
    "build-css": Object {
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "build-html": Object {
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "build-javascript": Object {
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "develop": Object {
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
    "develop-html": Object {
      "plugins": Array [
        Object {
          "name": "test-babel-plugin",
          "options": Object {},
        },
      ],
      "presets": Array [],
    },
  },
}
`;

exports[`Babelrc actions/reducer allows adding a new preset 1`] = `
Object {
  "options": Object {
    "babelrc": false,
    "cacheDirectory": true,
  },
  "stages": Object {
    "build-css": Object {
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "build-html": Object {
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "build-javascript": Object {
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "develop": Object {
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
    "develop-html": Object {
      "plugins": Array [],
      "presets": Array [
        Object {
          "name": "test-babel-preset",
          "options": Object {},
        },
      ],
    },
  },
}
`;

exports[`Babelrc actions/reducer handles custom .babelrc files 1`] = `
Object {
  "options": Object {
    "babelrc": false,
    "cacheDirectory": true,
    "sourceMaps": "inline",
  },
  "stages": Object {
    "build-css": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {},
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "targets": Object {
              "browsers": Array [
                "last 2 versions",
                "safari >= 7",
              ],
            },
          },
        },
        Object {
          "name": "@babel/react",
          "options": Object {},
        },
      ],
    },
    "build-html": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {},
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "targets": Object {
              "browsers": Array [
                "last 2 versions",
                "safari >= 7",
              ],
            },
          },
        },
        Object {
          "name": "@babel/react",
          "options": Object {},
        },
      ],
    },
    "build-javascript": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {},
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "targets": Object {
              "browsers": Array [
                "last 2 versions",
                "safari >= 7",
              ],
            },
          },
        },
        Object {
          "name": "@babel/react",
          "options": Object {},
        },
      ],
    },
    "develop": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {},
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "targets": Object {
              "browsers": Array [
                "last 2 versions",
                "safari >= 7",
              ],
            },
          },
        },
        Object {
          "name": "@babel/react",
          "options": Object {},
        },
      ],
    },
    "develop-html": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {},
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "targets": Object {
              "browsers": Array [
                "last 2 versions",
                "safari >= 7",
              ],
            },
          },
        },
        Object {
          "name": "@babel/react",
          "options": Object {},
        },
      ],
    },
  },
}
`;

exports[`Babelrc actions/reducer sets default presets/plugins if there's no userland babelrc 1`] = `
Object {
  "options": Object {
    "babelrc": false,
    "cacheDirectory": true,
  },
  "stages": Object {
    "build-css": Object {
      "plugins": Array [],
      "presets": Array [],
    },
    "build-html": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-proposal-class-properties",
          "options": Object {
            "loose": true,
          },
          "stage": "build-html",
        },
        Object {
          "name": "@babel/plugin-syntax-dynamic-import",
          "options": Object {},
          "stage": "build-html",
        },
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {
            "helpers": true,
            "polyfill": false,
            "regenerator": true,
          },
          "stage": "build-html",
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "loose": true,
            "modules": false,
            "shippedProposals": true,
            "sourceType": "unambiguous",
            "targets": Object {
              "browsers": Object {},
            },
            "useBuiltIns": "usage",
          },
          "stage": "build-html",
        },
        Object {
          "name": "@babel/preset-react",
          "options": Object {
            "development": false,
            "pragma": "React.createElement",
            "useBuiltIns": true,
          },
          "stage": "build-html",
        },
        Object {
          "name": "@babel/preset-flow",
          "options": Object {},
          "stage": "build-html",
        },
      ],
    },
    "build-javascript": Object {
      "plugins": Array [],
      "presets": Array [],
    },
    "develop": Object {
      "plugins": Array [
        Object {
          "name": "@babel/plugin-proposal-class-properties",
          "options": Object {
            "loose": true,
          },
          "stage": "develop",
        },
        Object {
          "name": "@babel/plugin-syntax-dynamic-import",
          "options": Object {},
          "stage": "develop",
        },
        Object {
          "name": "@babel/plugin-transform-runtime",
          "options": Object {
            "helpers": true,
            "polyfill": false,
            "regenerator": true,
          },
          "stage": "develop",
        },
      ],
      "presets": Array [
        Object {
          "name": "@babel/preset-env",
          "options": Object {
            "loose": true,
            "modules": false,
            "shippedProposals": true,
            "sourceType": "unambiguous",
            "targets": Object {
              "browsers": Object {},
            },
            "useBuiltIns": "usage",
          },
          "stage": "develop",
        },
        Object {
          "name": "@babel/preset-react",
          "options": Object {
            "development": true,
            "pragma": "React.createElement",
            "useBuiltIns": true,
          },
          "stage": "develop",
        },
        Object {
          "name": "@babel/preset-flow",
          "options": Object {},
          "stage": "develop",
        },
      ],
    },
    "develop-html": Object {
      "plugins": Array [],
      "presets": Array [],
    },
  },
}
`;

exports[`Babelrc actions/reducer sets default presets/plugins if there's no userland babelrc 2`] = `
Object {
  "babelrc": false,
  "cacheDirectory": true,
  "plugins": Array [
    "/Users/kylemathews/programs/gatsby-v2/packages/babel-plugin-remove-graphql-queries/index.js",
    "/Users/kylemathews/programs/gatsby-v2/node_modules/react-hot-loader/babel.js",
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/plugin-syntax-dynamic-import/lib/index.js",
      Object {},
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/plugin-transform-runtime/lib/index.js",
      Object {
        "helpers": true,
        "polyfill": false,
        "regenerator": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "loose": true,
        "modules": false,
        "shippedProposals": true,
        "sourceType": "unambiguous",
        "targets": Object {
          "browsers": Object {},
        },
        "useBuiltIns": "usage",
      },
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/preset-react/lib/index.js",
      Object {
        "development": true,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/preset-flow/lib/index.js",
      Object {},
    ],
  ],
}
`;

exports[`Babelrc actions/reducer sets default presets/plugins if there's no userland babelrc 3`] = `
Object {
  "babelrc": false,
  "cacheDirectory": true,
  "plugins": Array [
    "/Users/kylemathews/programs/gatsby-v2/packages/babel-plugin-remove-graphql-queries/index.js",
    "/Users/kylemathews/programs/gatsby-v2/node_modules/babel-plugin-dynamic-import-node/lib/index.js",
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
      Object {
        "loose": true,
      },
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/plugin-syntax-dynamic-import/lib/index.js",
      Object {},
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/plugin-transform-runtime/lib/index.js",
      Object {
        "helpers": true,
        "polyfill": false,
        "regenerator": true,
      },
    ],
  ],
  "presets": Array [
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/preset-env/lib/index.js",
      Object {
        "loose": true,
        "modules": false,
        "shippedProposals": true,
        "sourceType": "unambiguous",
        "targets": Object {
          "browsers": Object {},
        },
        "useBuiltIns": "usage",
      },
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/preset-react/lib/index.js",
      Object {
        "development": true,
        "pragma": "React.createElement",
        "useBuiltIns": true,
      },
    ],
    Array [
      "/Users/kylemathews/programs/gatsby-v2/node_modules/@babel/preset-flow/lib/index.js",
      Object {},
    ],
  ],
}
`;
